<resources>
    <string name="gear">Gear</string>
    <string name="exotics">Exotics</string>
    <string name="weapons">Weapons</string>
    <string name="gear_mods">Gear Mods</string>
    <string name="weapon_mods">Weapon Mods</string>
    <string name="score">Score</string>
    <string name="armor">Armor</string>
    <string name="price">Price</string>
    <string name="firearms">Firearms</string>
    <string name="stamina">Stamina</string>
    <string name="electronics">Electronics</string>
    <string name="major">Major Attributes</string>
    <string name="minor">Minor Attributes</string>
    <string name="update_check_failed">An error occured while checking for an update. Please check your internet connection</string>
    <string name="up_to_date">Your app is up-to-date</string>
    <string name="cancel">Cancel</string>
</resources>
