<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardPreventCornerOverlap="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/gear_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp"
                android:background="@drawable/table_cell_bg"/>

            <TextView
                android:id="@+id/gear_vendor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/gear_name"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@drawable/table_cell_bg"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gear_vendor"
                android:stretchColumns="*"
                android:id="@+id/gearTable">

                <TableRow android:layout_width="0dp">

                    <TextView
                        android:id="@+id/gear_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:text="@string/score"
                        android:background="@drawable/table_cell_bg"/>

                    <TextView
                        android:id="@+id/gear_armor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:text="@string/armor"
                        android:background="@drawable/table_cell_bg"/>

                    <TextView
                        android:id="@+id/gear_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:text="@string/price"
                        android:background="@drawable/table_cell_bg"/>

                </TableRow>

                <TableRow android:layout_width="0dp">

                    <TextView
                        android:id="@+id/gear_score_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:background="@drawable/table_cell_bg"/>

                    <TextView
                        android:id="@+id/gear_armor_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:background="@drawable/table_cell_bg"/>

                    <TextView
                        android:id="@+id/gear_price_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:background="@drawable/table_cell_bg"/>

                </TableRow>

                <TableRow android:layout_width="0dp">

                    <TextView
                        android:id="@+id/gear_firearms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:text="@string/firearms"
                        android:background="@drawable/table_cell_bg"/>

                    <TextView
                        android:id="@+id/gear_stamina"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:text="@string/stamina"
                        android:background="@drawable/table_cell_bg"/>

                    <TextView
                        android:id="@+id/gear_electronics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:text="@string/electronics"
                        android:background="@drawable/table_cell_bg"/>

                </TableRow>

                <TableRow android:layout_width="0dp" >

                    <TextView
                        android:id="@+id/gear_firearms_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:background="@drawable/table_cell_bg" />

                    <TextView
                        android:id="@+id/gear_stamina_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:background="@drawable/table_cell_bg" />

                    <TextView
                        android:id="@+id/gear_electronics_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:background="@drawable/table_cell_bg" />

                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gearTable"
                android:id="@+id/gear_major"
                android:paddingLeft="10dp"
                android:textSize="15sp"
                android:text="@string/major"
                android:background="@drawable/table_cell_bg"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gear_major"
                android:id="@+id/gear_major_value"
                android:paddingLeft="10dp"
                android:textSize="15sp"
                android:background="@drawable/table_cell_bg"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gear_major_value"
                android:id="@+id/gear_minor"
                android:paddingLeft="10dp"
                android:text="@string/minor"
                android:textSize="15sp"
                android:background="@drawable/table_cell_bg"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gear_minor"
                android:paddingLeft="10dp"
                android:id="@+id/gear_minor_value"
                android:textSize="15sp"
                android:background="@drawable/table_cell_bg"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>